@@ -1,284 +1,216 @@
-<img src="https://talk.openmrs.org/uploads/default/original/2X/f/f1ec579b0398cb04c80a54c56da219b2440fe249.jpg" alt="OpenMRS"/>
 
-[![Build Status](https://travis-ci.org/openmrs/openmrs-core.svg?branch=master)](https://travis-ci.org/openmrs/openmrs-core) [![Coverage Status](https://coveralls.io/repos/github/openmrs/openmrs-core/badge.svg?branch=master)](https://coveralls.io/github/openmrs/openmrs-core?branch=master) [![Codacy Badge](https://api.codacy.com/project/badge/Grade/a51303ee46c34775a7c31c8d6016da6b)](https://www.codacy.com/app/openmrs/openmrs-core?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=openmrs/openmrs-core&amp;utm_campaign=Badge_Grade)
+## How to compile and run.
+1. First you need to install JAVA on the server.
+```bash
+ sudo apt-get update
+ sudo apt-get install defaul-jdk
+```
+Check Java version:
+```bash
+ java -version
+```
+2. The Tomcat or Jetty servlet container. We will install Tomcat-9. Go to the folder opt and download the archive Tomcat-9:
+```bash
+ cd /opt
+ sudo wget http://www-eu.apache.org/dist/tomcat/tomcat-9/v9.0.12/bin/apache-tomcat-9.0.12.tar.gz
+```
+We unpack:
+```bash
+ sudo tar -zxf apache-tomcat-9.0.12.tar.gz
+```
+For convenience, change the name of the unpacked folder to tomcat using the following command:
+```bash
+ sudo mv apache-tomcat-9.0.12 tomcat
+```
+Now we need to add Tomcat to the services so that it can be easily started and stopped.
+Create a new file ##tomcat.service
+```bash
+ sudo nano /etc/systemd/system/tomcat.service
+```
+Add the following lines to it:
+```bash
+[Unit]
+Description=Tomcat9
+After=network.target
 
-api: [![API](https://snyk.io/test/github/openmrs/openmrs-core/badge.svg?targetFile=api%2Fpom.xml)](https://snyk.io/test/github/openmrs/openmrs-core?targetFile=api%2Fpom.xml)
-test: [![test](https://snyk.io/test/github/openmrs/openmrs-core/badge.svg?targetFile=test%2Fpom.xml)](https://snyk.io/test/github/openmrs/openmrs-core?targetFile=test%2Fpom.xml)
-tools: [![tools](https://snyk.io/test/github/openmrs/openmrs-core/badge.svg?targetFile=tools%2Fpom.xml)](https://snyk.io/test/github/openmrs/openmrs-core?targetFile=tools%2Fpom.xml)
-web: [![web](https://snyk.io/test/github/openmrs/openmrs-core/badge.svg?targetFile=web%2Fpom.xml)](https://snyk.io/test/github/openmrs/openmrs-core?targetFile=web%2Fpom.xml)
-webapp: [![webapp](https://snyk.io/test/github/openmrs/openmrs-core/badge.svg?targetFile=webapp%2Fpom.xml)](https://snyk.io/test/github/openmrs/openmrs-core?targetFile=webapp%2Fpom.xml)
+[Service]
+Type=forking
 
-OpenMRS is a patient-based medical record system focusing on giving providers a free customizable electronic medical record system (EMR).
+Environment=CATALINA_PID=/opt/tomcat/tomcat9.pid
+Environment=JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64
+Environment=CATALINA_HOME=/opt/tomcat
+Environment=CATALINA_BASE=/opt/tomcat
+Environment="CATALINA_OPTS=-Xms512m -Xmx512m"
+Environment="JAVA_OPTS=-Dfile.encoding=UTF-8 -Dnet.sf.ehcache.skipUpdateCheck=true -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:+UseParNewGC"
+ExecStart=/opt/tomcat/bin/startup.sh
+ExecStop=/opt/tomcat/bin/shutdown.sh
 
-The mission of OpenMRS is to improve health care delivery in resource-constrained environments by coordinating a global community that creates a robust, scalable, user-driven, open source medical record system platform.
+[Install]
+WantedBy=multi-user.target
+```
+Save the file and restart the service manager:
+```bash
+ sudo systemctl daemon-reload
+```
+To add the Tomcat service to startup:
+```bash
+ sudo systemctl enable tomcat
+```
+We launch Tomcat through the service and check its status:
+```bash
+ sudo service tomcat start
+ service tomcat status
 
-#### Table of Contents
+Loaded: loaded (/etc/systemd/system/tomcat.service: disabled; vendor preset: enabled)
+Active: active (running)...........
+.....................
+```
+By default, Tomcat runs on port 8080. If desired, you can change it. Next, create users.
+Open the file /opt/tomcat/conf/tomcat-users.xml:
+```bash
+ sudo nano /opt/tomcat/conf/tomcat-users.xml
+```
+Create a new user named admin and the role of admin, manager, and manager-gui. This file must be protected, so you will need to open it as root, and add the entry like this:
+```bash
+<role rolename="tomcat"/>                                                    
+<role rolename="admin"/>                                                     
+<role rolename="manager"/>                                                   
+<role rolename="manager-gui"/>
+<user name="admin" password="XXXXXX" roles="tomcat,admin,manager,manager-gui"/>
+```
+Save and close.
 
-1. [Build](#build)
-   1. [Prerequisites](#prerequisites)
-   2. [Build Command](#build-command)
-   3. [Deploy](#deploy)
-2. [Docker build](#docker-build)
-3. [Navigating the repository](#navigating-the-repository)
-4. [Software Development Kit](#software-development-kit)
-5. [Extending OpenMRS with Modules](#extending-openmrs-with-modules)
-6. [Documentation](#documentation)
-   1. [Developer guides](#developer-guides)
-   2. [Wiki](#wiki)
-   3. [Website](#website)
-7. [Contributing](#contributing)
-   1. [Code](#code)
-   2. [Code Reviews](#code-reviews)
-   3. [Translation](#translation)
-8. [Issues](#issues)
-9. [Community](#community)
-10. [Support](#support)
-11. [License](#license)
+To connect to the service from outside the comment lines in the files /opt/tomcat/webapps/manager/META-INF/context.xml and /opt/tomcat/webapps/host-manager/META-INF/context.xml:
+```bash
+ sudo nano /opt/tomcat/webapps/manager/META-INF/context.xml
+```
+```bash
+. . . . . . 
+<Context antiResourceLocking="false" privileged="true" >
+ <!-- <Valve className="org.apache.catalina.valves.RemoteAddrValve"
+         allow="127\.\d+\.\d+\.\d+|::1|0:0:0:0:0:0:0:1" /> -->
+  <Manager sessionAttributeValueClassNameFilter="java\.lang\.(?:Boolean|Integer$
+</Context>
+. . . . . .
+```
+```bash
+ sudo nano /opt/tomcat/webapps/host-manager/META-INF/context.xml
+```
+```bash
+. . . . . .
+<Context antiResourceLocking="false" privileged="true" >
+ <!-- <Valve className="org.apache.catalina.valves.RemoteAddrValve"
+         allow="127\.\d+\.\d+\.\d+|::1|0:0:0:0:0:0:0:1" /> -->
+  <Manager sessionAttributeValueClassNameFilter="java\.lang\.(?:Boolean|Integer$
+</Context>
+. . . . . . 
+```
+To increase the amount of uploaded files, edit the file /opt/tomcat/webapps/manager/WEB-INF/web.xml:
+```bash
+. . . . .
+<multipart-config>
+      <!-- 80MB max -->
+      <max-file-size>82428800</max-file-size>
+      <max-request-size>82428800</max-request-size>
+. . . . . .
+```
+And run Tomcat:
+```bash
+ sudo service tomcat start
+```
+<img class="img-responsive" src="http://aidakomed.info/wp-content/uploads/2018/08/Screenshot_2018-08-07-Apache-Tomcat-9-0-10-768x491.png" alt="">
 
-## Build
-
-### Prerequisites
-
-#### Java
-
-OpenMRS is a Java application which is why you need to install a Java JDK.
-
-If you want to build the master branch you will need a Java JDK of minimum version 8.
-
-#### Maven
-
-Install the build tool [Maven](https://maven.apache.org/).
-
-You need to ensure that Maven uses the Java JDK needed for the branch you want to build.
-
-To do so execute
+3. Install Maven to build AidakoMed:
 
 ```bash
-mvn -version
+ sudo apt-get install maven
 ```
-
-which will tell you what version Maven is using. Refer to the [Maven docs](https://maven.apache.org/configure.html) if you need to configure Maven.
-
-#### Git
-
-Install the version control tool [git](https://git-scm.com/) and clone this repository with
+4. Install git:
+```bash
+ sudo apt-get install git
+```
+. Clone the aidakomed repository and compile:
 
 ```bash
-git clone https://github.com/openmrs/openmrs-core.git
+ sudo git clone https://github.com/AidakoMed/aidakomed.git
+ cd aidakomed
+ sudo mvn clean package
 ```
-
-### Build Command
-
-After you have taken care of the [Prerequisites](#prerequisites)
-
-Execute the following
+The compiled openmrs.war file will be located in the /aidakomed/webapp/target/folder and copy it to the /opt/tomcat/webapps/ folder and restart Tomcat:
 
 ```bash
-cd openmrs-core
-mvn clean package
+ cd /aidakomed/webapp/target
+ sudo cp openmrs.war /opt/tomcat/webapps/
+ service tomcat restart
 ```
+You can also download the war file via the web interface of tomcat:
 
-This will generate the OpenMRS application in `webapp/target/openmrs.war` which you will have to deploy into an application server like for example [tomcat](https://tomcat.apache.org/) or [jetty](http://www.eclipse.org/jetty/).
+<img class="img-responsive" src="http://aidakomed.info/wp-content/uploads/2018/08/Screenshot_2018-08-07-manager-768x491.png" alt="">
 
-### Deploy
-
-For development purposes you can simply deploy the `openmrs.war` into the application server jetty via
+6. Install Mysql:
 
 ```bash
-cd openmrs-core/webapp
-mvn jetty:run
+ sudo apt-get install mysql-server mysql-client
 ```
+In the query field, create a password for the root user and remember.
 
-If all goes well (check the console output) you can access the OpenMRS application at `localhost:8080/openmrs`.
+Then in the browser at http://localhost:8080/openmrs the installer will prompt you for the next steps.
 
-Refer to [Getting Started as a Developer - Maven](https://wiki.openmrs.org/display/docs/Maven) for some more information
-on useful Maven commands and build options.
+Starting the installer:
 
-## Docker build
+<img class="img-responsive" src="http://aidakomed.info/wp-content/uploads/2018/08/Screenshot_2018-08-03-Screenshot-768x491.png" alt="">
 
-Docker builds are still work in progress. We appreciate any feedback and improvements to the process.
+Language selection.
 
-The only prerequisite needed is Docker. 
+<img class="img-responsive" src="http://aidakomed.info/wp-content/uploads/2018/08/Screenshot_2018-08-03-Screenshot1-768x491.png" alt="">
 
-In order to build a development version run:
-```bash 
-docker-compose build
-```
-It calls `mvn install` by default. If you would like to customize mvn build arguments you can do so by running:
+Select the version of the installation.
+
+<img class="img-responsive" src="http://aidakomed.info/wp-content/uploads/2018/08/Screenshot_2018-08-03-Screenshot2-768x491.png" alt="">
+
+Create or select a database.
+
+<img class="img-responsive" src="http://aidakomed.info/wp-content/uploads/2018/08/Screenshot_2018-08-03-Screenshot3-768x491.png" alt="">
+
+<img class="img-responsive" src="http://aidakomed.info/wp-content/uploads/2018/08/Screenshot_2018-08-03-Screenshot7-768x491.png" alt="">
+
+<img class="img-responsive" src="http://aidakomed.info/wp-content/uploads/2018/08/Screenshot_2018-08-03-Screenshot8-768x491.png" alt="">
+
+The password for the admin user of the AidakoMED server.
+
+<img class="img-responsive" src="http://aidakomed.info/wp-content/uploads/2018/08/Screenshot_2018-08-03-Screenshot9-768x491.png" alt="">
+
+<img class="img-responsive" src="http://aidakomed.info/wp-content/uploads/2018/08/Screenshot_2018-08-03-AidakoMed-768x491.png" alt="">
+
+AidakoMED is installed, now we will compile and install the administrative module legacy-ui:
+
 ```bash
-docker-compose build --build-arg MVN_ARGS='install -DskipTests'
+ sudo wget https://github.com/AidakoMed/aidakomed-module-legacyui/archive/master.zip
+ sudo unzip master.zip
+ cd aidakomed
+ sudo mvn clean package
 ```
-It is also possible to use the built dev image to run jetty:
+The compiled .omod file will be located in the omod/target folder, copy this .omod file to the directory in the root of the server in the modules folder and restart tomcat:
+
 ```bash
-docker-compose up
+ sudo cp legacyui-1.5.0-SNAPSHOT.omod  ~/.OpenMRS/modules
+ sudo service tomcat restart
 ```
 
-In order to build a production version run:
-```bash
-docker-compose -f docker-compose.yml build
-```
-It first builds the dev image and then an image with Tomcat and openmrs.war. 
-It has no dev dependencies.
+You can also compile and load other modules (https://github.com/AidakoMed)
 
-The production version can be run with:
-```bash
-docker-compose -f docker-compose.yml up
-```
-If you want to debug, you need to run a development version and connect your debugger to port 8000, which is exposed by default.
+As a result, we will see such a picture at
 
-Unfortunately, at this point any code changes require full restart and rebuild of the docker container. To speed up the process,
-please use:
-```bash
-docker-compose build --build-arg MVN_ARGS='install -DskipTests'
-docker-compose up
-```
-We are working towards providing support for Spring Boot auto-reload feature, which will be documented here once ready.
+http://yuor_domain_name_or_IP:8080/openmrs 
 
-It is also possible to deploy an image built by our CI, which is published at 
-https://hub.docker.com/r/openmrs/openmrs-core
+<img class="img-responsive" src="http://aidakomed.info/wp-content/uploads/2018/08/Screenshot_2018-08-04-%D0%90%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B0%D1%86%D0%B8%D1%8F-768x491.png" alt="">
 
-You can run any tag available with:
-```bash
-TAG=nightly docker-compose -f docker-compose.yml up
-```
-It is also possible to run a development version of an image with:
-```bash
-TAG=dev docker-compose up
-```
-All development versions contain dev suffix. The cache suffix is for use by our CI.
+legacy-ui is installed, at the bottom you can change the locale (language) available-English, Russian, Kazakh, French, etc., now you can install modules via the web interface. They can be found on the portal github and gitlab. Also, the modules from OpenMRS, LibreHealth.
 
-## Navigating the repository
+Done.
 
-The project tree is set up as follows:
+Perhaps you need a ready solution from the box, you can download the AidakoMed-Box distribution to your server from http://aidakomed.info.
 
-<table>
- <tr>
-  <td>api/</td>
-  <td>Java and resource files for building the java api jar file.</td>
- </tr>
- <tr>
-  <td>tools/</td>
-  <td>Meta code used during compiling and testing. Does not go into any released binary (like doclets).</td>
- </tr>
- <tr>
-  <td>web/</td>
-  <td>Java and resource files that are used in the webapp/war file.</td>
- </tr>
- <tr>
-  <td>webapp/</td>
-  <td>files used in building the war file (contains JSP files on older versions).</td>
- </tr>
- <tr>
-  <td>pom.xml</td>
-  <td>The main maven file used to build and package OpenMRS.</td>
- </tr>  
-</table>
 
-## Software Development Kit
 
-For rapid development of modules and the OpenMRS Platform code check out the
-awesome SDK at
-
-https://wiki.openmrs.org/display/docs/OpenMRS+SDK
-
-## Extending OpenMRS with Modules
-
-OpenMRS has a modular architecture that allows developers to extend the OpenMRS core functionality by creating modules that can easily be added or removed to meet the needs of a specific implementation.
-
-Before creating your own module go to the [OpenMRS Module Repository](https://addons.openmrs.org/) and see if there is already a module for your specific use case. If so deploy and try it and if a functionality is missing join the developers of the module to add a feature.
-
-If you haven't found what you were looking for refer to the [Module - wiki](https://wiki.openmrs.org/display/docs/Modules) to learn how you can create a new module.
-
-## Documentation
-
-### Developer guides
-
-If you want to contribute please refer to these resources
-
-* [Getting Started as a Developer](https://wiki.openmrs.org/display/docs/Get+Started+as+a+Developer)
-* [How To Configure Your IDE](https://wiki.openmrs.org/display/docs/How-To+Setup+And+Use+Your+IDE)
-* [How To Make a Pull Request](https://wiki.openmrs.org/display/docs/Pull+Request+Tips)
-
-### Wiki
-
-If you are looking for detailed guides on how to install, configure, contribute and
-extend OpenMRS visit
-
-http://wiki.openmrs.org
-
-### Website
-
-If you are looking for more information regarding OpenMRS as an organization
-check
-
-http://openmrs.org
-
-## Contributing
-
-Contributions are very welcome, we can definitely use your help!
-
-OpenMRS organizes the privileges of its contributors in developer stages which
-are documented [here](https://wiki.openmrs.org/display/RES/OpenMRS+Developer+Stages).
-
-Read the following sections to find out where you could help.
-
-### Code
-
-Check out our [contributing guidelines](CONTRIBUTING.md), read through the [Developer guides](#developer-guides).
-
-After you've read up :eyeglasses: [grab an introductory issue](https://wiki.openmrs.org/display/docs/Contribute+as+a+Developer#ContributeasaDeveloper-Workonanissue) that is `Ready For Work`.
-
-### Code Reviews
-
-You might not have the time to develop yourself but enough experience with
-OpenMRS and/or reviewing code, your help on code reviews will be much
-appreciated!
-
-Read
-
-https://wiki.openmrs.org/display/docs/Code+Review
-
-and get started with re-:eyes: pull requests!
-
-### Translation
-
-We use
-
-https://www.transifex.com/openmrs/OpenMRS/
-
-to manage our translations.
-
-The `messages.properties` file in this repository is our single source of
-truth. It contains key, value pairs for the English language which is the
-default.
-
-Transifex fetches updates to this file every night which can then be translated
-by you and me on transifex website itself. At any time we can pull new translations from transifex
-back into this repository. Other languages like for ex. Spanish will then be in
-the `messages_es.properties` file.
-
-If you would like to know how to help with translations see
-
-http://openmrs.org/join-the-community/translate/
-
-## Issues
-
-If you want help fix existing issues or you found a bug and want to tell us please go to
-
-https://issues.openmrs.org
-
-## Community
-
-[![OpenMRS Talk](https://omrs-shields.psbrandt.io/custom/openmrs/talk/F26522?logo=openmrs)](http://talk.openmrs.org)
-[![OpenMRS IRC](https://img.shields.io/badge/openmrs-irc-EEA616.svg?logo=data%3Aimage%2Fsvg%2Bxml%3Bbase64%2CPHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI2MTIiIGhlaWdodD0iNjEyIiB2aWV3Qm94PSIwIDAgNjEyIDYxMiI%2BPHBhdGggZD0iTTE1MyAyMjkuNWMtMjEuMTMzIDAtMzguMjUgMTcuMTE3LTM4LjI1IDM4LjI1UzEzMS44NjcgMzA2IDE1MyAzMDZjMjEuMTE0IDAgMzguMjUtMTcuMTE3IDM4LjI1LTM4LjI1UzE3NC4xMzMgMjI5LjUgMTUzIDIyOS41em0xNTMgMGMtMjEuMTMzIDAtMzguMjUgMTcuMTE3LTM4LjI1IDM4LjI1UzI4NC44NjcgMzA2IDMwNiAzMDZjMjEuMTE0IDAgMzguMjUtMTcuMTE3IDM4LjI1LTM4LjI1UzMyNy4xMzMgMjI5LjUgMzA2IDIyOS41em0xNTMgMGMtMjEuMTMzIDAtMzguMjUgMTcuMTE3LTM4LjI1IDM4LjI1UzQzNy44NjcgMzA2IDQ1OSAzMDZzMzguMjUtMTcuMTE3IDM4LjI1LTM4LjI1UzQ4MC4xMzMgMjI5LjUgNDU5IDIyOS41ek0zMDYgMEMxMzcuMDEyIDAgMCAxMTkuODc1IDAgMjY3Ljc1YzAgODQuNTE0IDQ0Ljg0OCAxNTkuNzUgMTE0Ljc1IDIwOC44MjZWNjEybDEzNC4wNDctODEuMzRjMTguNTUyIDMuMDYyIDM3LjYzOCA0Ljg0IDU3LjIwMyA0Ljg0IDE2OS4wMDggMCAzMDYtMTE5Ljg3NSAzMDYtMjY3Ljc1UzQ3NS4wMDggMCAzMDYgMHptMCA0OTcuMjVjLTIyLjMzOCAwLTQzLjkxLTIuNi02NC42NDMtNy4wMmwtOTAuMDQgNTQuMTI0IDEuMjA0LTg4LjdDODMuNSA0MTQuMTMzIDM4LjI1IDM0NS41MTMgMzguMjUgMjY3Ljc1YzAtMTI2Ljc0IDExOS44NzUtMjI5LjUgMjY3Ljc1LTIyOS41czI2Ny43NSAxMDIuNzYgMjY3Ljc1IDIyOS41UzQ1My44NzUgNDk3LjI1IDMwNiA0OTcuMjV6IiBmaWxsPSIjZmZmIi8%2BPC9zdmc%2B)](http://irc.openmrs.org)
-[![OpenMRS Telegram](https://img.shields.io/badge/openmrs-telegram-009384.svg?logo=data%3Aimage%2Fsvg%2Bxml%3Bbase64%2CPHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNDAgMjQwIj48ZGVmcz48bGluZWFyR3JhZGllbnQgaWQ9ImEiIHgxPSIuNjY3IiB5MT0iLjE2NyIgeDI9Ii40MTciIHkyPSIuNzUiPjxzdG9wIHN0b3AtY29sb3I9IiMzN2FlZTIiIG9mZnNldD0iMCIvPjxzdG9wIHN0b3AtY29sb3I9IiMxZTk2YzgiIG9mZnNldD0iMSIvPjwvbGluZWFyR3JhZGllbnQ%2BPGxpbmVhckdyYWRpZW50IGlkPSJiIiB4MT0iLjY2IiB5MT0iLjQzNyIgeDI9Ii44NTEiIHkyPSIuODAyIj48c3RvcCBzdG9wLWNvbG9yPSIjZWZmN2ZjIiBvZmZzZXQ9IjAiLz48c3RvcCBzdG9wLWNvbG9yPSIjZmZmIiBvZmZzZXQ9IjEiLz48L2xpbmVhckdyYWRpZW50PjwvZGVmcz48Y2lyY2xlIGN4PSIxMjAiIGN5PSIxMjAiIHI9IjEyMCIgZmlsbD0idXJsKCNhKSIvPjxwYXRoIGZpbGw9IiNjOGRhZWEiIGQ9Ik05OCAxNzVjLTMuODg4IDAtMy4yMjctMS40NjgtNC41NjgtNS4xN0w4MiAxMzIuMjA3IDE3MCA4MCIvPjxwYXRoIGZpbGw9IiNhOWM5ZGQiIGQ9Ik05OCAxNzVjMyAwIDQuMzI1LTEuMzcyIDYtM2wxNi0xNS41NTgtMTkuOTU4LTEyLjAzNSIvPjxwYXRoIGZpbGw9InVybCgjYikiIGQ9Ik0xMDAuMDQgMTQ0LjQxbDQ4LjM2IDM1LjczYzUuNTIgMy4wNDQgOS41IDEuNDY3IDEwLjg3Ni01LjEyNGwxOS42ODUtOTIuNzYzYzIuMDE2LTguMDgtMy4wOC0xMS43NDYtOC4zNTgtOS4zNWwtMTE1LjU5IDQ0LjU3MmMtNy44OSAzLjE2NS03Ljg0NCA3LjU2Ny0xLjQ0IDkuNTI4bDI5LjY2NCA5LjI2IDY4LjY3My00My4zMjZjMy4yNC0xLjk2NiA2LjIxNy0uOTEgMy43NzUgMS4yNTgiLz48L3N2Zz4%3D)](https://telegram.me/openmrs)
-[![OpenMRS Wiki](https://img.shields.io/badge/openmrs-wiki-5B57A6.svg?logo=data%3Aimage%2Fsvg%2Bxml%3Bbase64%2CPHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxNjAiIGhlaWdodD0iMTQyIiB2aWV3Qm94PSIwIDAgMTYwIDE0MiI%2BPHBhdGggY2xhc3M9InN0MCIgZD0iTTExMy42MTUgOTQuNDk0Yy0yLjAxNi0zLjk3NC00LjQwNS03Ljk5LTcuMi0xMi4wNzctMi0yLjkzLTQuMTQ1LTUuNzc4LTYuMzg3LTguNTY3LS45MS0xLjEzNi0uNTMtMi41NDguMTY3LTMuMjUuNjg4LS43MDUgMS4zOC0xLjQxIDIuMDc2LTIuMTIgOS41OC05Ljc3IDE5LjQ5LTE5Ljg3MyAyNy4wOS0zMC43ODcgOC4wOC0xMS42MSAxMi41Ni0yMi42MjQgMTMuNjktMzMuOTU0LjEyLTEuMTQtLjQtMi4zNS0xLjMyLTMuMDUtLjYtLjQ2LTEuMzMtLjctMi4wNy0uNy0uNDEgMC0uODIuMDctMS4yMS4yMi03LjM3IDIuODItMTQuODUgNC45Ni0yMS42OCA2LjU1LTEuMzkuMzItMi41MSAxLjM2LTIuOTggMi42LTQuOTggMTMuNjMtMTcuNjggMjYuNjEtMzEuMDEgNDAuMi0uNTMuNTEtMS4yOCAxLjE4LTIuNSAxLjE4cy0xLjk2LS42NS0yLjUtMS4xOGMtMTMuMzMtMTMuNTktMjYuMDMtMjYuNTItMzEtNDAuMTUtLjQ2LTEuMjQtMS41OS0yLjI4LTIuOTgtMi42QzM2Ljk0IDUuMjIgMjkuNDUgMi45IDIyLjEuMDhjLS4zOTgtLjE1LS44MS0uMjI1LTEuMjItLjIyNS0uNzQgMC0xLjQ3LjI0LTIuMDcuNy0uOTQuNzE4LTEuNDQgMS44NzItMS4zMiAzLjA0OCAxLjEzIDExLjMzMiA1LjYgMjIuNDggMTMuNjg0IDM0LjA5IDcuNiAxMC45MTUgMTcuNTEgMjEuMDE3IDI3LjA5IDMwLjc4NyAxNy42NSAxNy45OTQgMzQuMzMgMzQuOTk3IDM1Ljc5IDU0LjcxMy4xMyAxLjc4IDEuNjIgMy4xNTggMy40IDMuMTU4aDIwLjc0Yy45NCAwIDEuODMtLjM4IDIuNDctMS4wNi42NS0uNjcuOTktMS41OC45NC0yLjUyLS4xOC0zLjcxLS43Mi03LjQyLTEuNTktMTEuMTZoLjAxYy0uMDI4LS4xMS0uMDQ3LS4yMi0uMDQ3LS4zMyAwLS43NS41ODgtMS4zOCAxLjM1Ny0xLjM4LjA3IDAgLjEzLjAyLjIuMDMgMTYuOTMgMi40OCAyNy42MzYgNi40NCAyNy42NSAxMC44di4wMWMwIDQuMTEtOS42MjMgMTAuMzEtMjUuMjY2IDE0Ljg1bC0uMDA1LjAxYy0xLjM5LjQtMi40MDYgMS42Ni0yLjQwNiAzLjE1IDAgMS44MSAxLjQ5MyAzLjI4IDMuMzQgMy4yOC4yNTUgMCAuNS0uMDMuNzQtLjA4IDIxLjAyNi00Ljg2IDM0Ljk2NS0xMy4wMzQgMzQuOTY1LTIyLjI2MiAwLTEwLjk1NC0xOC44NC0yMC43NC00Ni45LTI1LjE1MnpNNTguMDEgODMuODA2Yy0uNDI1LS40NDQtMS4yNzctMS4wMzgtMi40MjItMS4wMzgtMS41NDcgMC0yLjQ2NiAxLTIuODEyIDEuNTMtMi4yNjQgMy40NDQtNC4yNCA2Ljg0My01Ljk0NiAxMC4yMDhDMTguODEgOTguOTI0IDAgMTA4LjcgMCAxMTkuNjVjMCA5LjIzNyAxMy44NCAxNy4zOTQgMzQuOTA1IDIyLjI1NS4wMDMuMDAyLjAyMyAwIC4wMyAwIC4yNS4wNTguNTA0LjA5NS43Ny4wOTUgMS44NDYgMCAzLjM0LTEuNDcgMy4zNC0zLjI4IDAtMS40ODctMS4wMTctMi43My0yLjQtMy4xM2wtLjAxLS4wMjJjLTE1LjY0NS00LjU0LTI1LjI3LTEwLjc0NC0yNS4yNy0xNC44NTJ2LS4wMWMuMDE3LTQuMzUzIDEwLjY5My04LjMwNiAyNy41OC0xMC43ODcuMDYyLS4wMS4xMi0uMDIuMTgyLS4wMi43NzUgMCAxLjM2OC42MyAxLjM2OCAxLjM5IDAgLjExLS4wMi4yMy0uMDQ2LjMzbC4wMS4wMWMtLjg3IDMuNzEtMS40IDcuNDEtMS41OCAxMS4xMS0uMDUuOTMuMjkgMS44NS45NCAyLjUzLjY0LjY3IDEuNTQgMS4wNiAyLjQ4IDEuMDZoMjAuNzRjMS43OCAwIDMuMjgtMS40IDMuNDEtMy4xNy40NS02LjA3IDIuMzUtMTIuMTUgNS43OC0xOC41NCAxLjE5LTIuMjEuMjYtNC4yOS0uNDItNS4xOC0zLjQyLTQuNDMtNy41OS05LjE2LTEzLjgxLTE1LjY1eiIgZmlsbD0iI2ZmZiIvPjxwYXRoIGNsYXNzPSJzdDAiIGQ9Ik03Ny44NjggMzIuNTc4Yy44Mi43OTggMS43NS45NDcgMi4zOS45NDdoLjAwNmMuNjQyIDAgMS41Ny0uMTQ4IDIuMzktLjk0NiA3LjMxMy03LjExIDExLjI0Mi0xNS40IDEyLjEwMy0xNy43MS4xMjUtLjM0LjI1Mi0uNzMuMjUyLTEuMjYgMC0xLjg0LTEuNTQtMy4xNi0zLjE0LTMuMTYtMS4zMyAwLTUuMS4zOS0xMS41OS4zOWgtLjA1Yy02LjUgMC0xMC4yNy0uMzktMTEuNTktLjM5LTEuNjEgMC0zLjE0IDEuMzEtMy4xNCAzLjE1IDAgLjUzLjEzLjkyLjI1IDEuMjYuODYgMi4zIDQuNzkgMTAuNTkgMTIuMSAxNy43eiIgZmlsbD0iI2ZmZiIvPjwvc3ZnPg%3D%3D)](https://wiki.openmrs.org)
-
-## Support
-
-Talk to us on [OpenMRS Talk](https://talk.openmrs.org/)
-
-## License
-
-[MPL 2.0 w/ HD](http://openmrs.org/license/) © [OpenMRS Inc.](http://www.openmrs.org/)
-
+<img class="img-responsive" src="http://aidakomed.info/wp-content/uploads/2018/11/aidakomed-mrs.png" alt="">
